--- a/2025-07-21-datology.md
+++ b/2025-07-21-datology.md
@@ -1,7 +1,6 @@
 # Datology
 
-**Start:** 2025-07-21
-**End:** TODO
+**Created:** 2025-07-21
 
 - [X] CLIP fundamentals: [[2025-07-21-vision-papers.md]]
 - [ ] Beyond neural scaling laws: beating power law scaling via data pruning: <https://arxiv.org/abs/2206.14486>
