--- a/coursera-statistical-mechanics.ipynb
+++ b/coursera-statistical-mechanics.ipynb
@@ -21,7 +21,10 @@
     "\n",
     "### Lecture 1: Introduction to Monte Carlo algorithms\n",
     "\n",
-    "Computing $\\pi$ via direct sampling Monte Carlo simulation by throwing a large number of darts randomly onto a circle of radius 1 tightly embedded within a square."
+    "- **Direct Sampling Monte Carlo**: Directly sampled from a target distribution i.i.d.\n",
+    "- **Metropolis-Hastings Markov-Chain Monte Carlo**: \n",
+    "\n",
+    "Computing $\\pi$ via Monte Carlo simulation of throwing darts onto a circle of radius 1 tightly embedded within a square. "
    ]
   },
   {
@@ -31,21 +34,81 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num_trials=10 pi=2.8\n",
-      "num_trials=100 pi=3.04\n",
-      "num_trials=1000 pi=3.18\n",
-      "num_trials=10000 pi=3.1432\n",
-      "num_trials=100000 pi=3.149\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_trials</th>\n",
+       "      <th>pi</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100</td>\n",
+       "      <td>3.20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>3.16800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>3.15440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100000</td>\n",
+       "      <td>3.13236</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   num_trials       pi\n",
+       "0          10  2.00000\n",
+       "1         100  3.20000\n",
+       "2        1000  3.16800\n",
+       "3       10000  3.15440\n",
+       "4      100000  3.13236"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def monte_carlo_pi(num_trials: int = 1000) -> float:\n",
+    "np.random.seed(1701)\n",
+    "\n",
+    "# Direct sampling Monte Carlo simulation\n",
+    "def pi_monte_carlo_direct_sampling(num_trials: int = 1000) -> float:\n",
     "    # Circle of radius 1 centered at (0,0). Square will have a side length of 2.\n",
     "    # Area of circle = pi * 1^2 = pi\n",
     "    # Area of square = 2^2 = 4\n",
@@ -61,11 +124,14 @@
     "    # pi/4 = within_circle/num_trials\n",
     "    pi = within_circle / num_trials * 4\n",
     "    return pi\n",
-    "  \n",
-    "for num_trials in [10, 100, 1000, 10000, 100000]:\n",
-    "    pi = monte_carlo_pi(num_trials)\n",
-    "    print(f\"{num_trials=} pi={pi}\")\n",
-    "        "
+    "\n",
+    "pd.DataFrame.from_records(\n",
+    "  {\n",
+    "      \"num_trials\": num_trials,\n",
+    "      \"pi\": monte_carlo_pi(num_trials),\n",
+    "  }\n",
+    "  for num_trials in [10, 100, 1000, 10000, 100000]\n",
+    ")"
    ]
   },
   {
